--- a/demo/index.html
+++ b/demo/index.html
@@ -4,13 +4,48 @@
 <title>jquery.ofthemonth.js - A jQuery plugin that returns the next specific day of the next month.</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width">
+<link href='http://fonts.googleapis.com/css?family=Lato:300,400,900' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/main.css">
 <script src="js/modernizr-2.6.1.min.js"></script>
 </head>
 <body>
-	<section>
-		<h1>Hello</h1>
-		<form action="">
+<!--[if lt IE 7]>
+				<p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
+<![endif]-->
+<header>
+	<h1>jquery.ofthemonth.js</h1>
+	<p>A jQuery plugin that returns the js date object of a specific upcoming day.</p>
+</header>
+<section class="intro">
+	<div class="section-content">
+		<h2>This plugin makes it easy to get a "next specific date".</h2>
+		<h4>Returns in the form of a <a href="http://www.w3schools.com/jsref/jsref_obj_date.asp">JavaScript Date Object</a></h4>
+	</div>
+</section>
+<section>
+	<h2>For example, let's say you want to always display the First Sunday of every month on your website.</h2>
+	<h3>All you have to do is call this plugin with the parameters you choose.</h3>
+	<h1 class="display-the-returned-date">The next "<i>First Sunday</i>" is <span></span></h1>
+	<p>The Paramaters Include</p>
+	<ul>
+		<li>Which Week To Target ("which_week" in the JS)</li>
+		<li>Which Day To Target ("which_day" in the JS)</li>
+	</ul>
+	<h4>Try switching it up here.</h4>
+	<form action="" class="clearfix">
+		<div class="which-select">
+		<h2>Select Which</h2>
+			<select name="week" id="week">
+				<option value="first">First</option>
+				<option value="second">Second</option>
+				<option value="third">Third</option>
+				<option value="fourth">Fourth</option>
+				<option value="second_to_last">Second To Last</option>
+				<option value="last">Last</option>
+			</select>
+		</div>
+		<div class="day-select">
 			<h2>Select Weekday</h2>
 			<select name="weekday" id="weekday">
 				<option value="Sunday">Sunday</option>
@@ -21,23 +56,49 @@
 				<option value="Friday">Friday</option>
 				<option value="Saturday">Saturday</option>
 			</select>
-			<h2>Select Which</h2>
-			<select name="week" id="week">
-				<option value="first">First</option>
-				<option value="second">Second</option>
-				<option value="third">Third</option>
-				<option value="fourth">Fourth</option>
-				<option value="second_to_last">Second To Last</option>
-				<option value="last">Last</option>
-			</select>
-		</form>
-		<h3>The Current Date is <span></span></h3>
-		<p class='current-date'></p>
-		<p>The next "<i>last Friday</i>" is <span></span></p>
-	</section>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="js/jquery-2.1.0.min.js"><\/script>')</script>
-	<script src="../dist/jquery.ofthemonth.js"></script>
-	<script src="js/main.js"></script>
+		</div>
+	</form>
+</section>
+
+<section>
+	<div class="section-content">
+		<h4>hopefully, it's just that easy</h4>
+	<div class="section-content">
+</section>
+<section class="the-code">
+	<div class="section-content">
+		<h2>The Code</h2>
+		<h3>The JavaScript / jQuery</h3>
+		<p>Just add "ofthemonth()" to your jQuery object.</p>
+		<code>
+			// returns the default (last friday);<br>
+			$(this).ofthemonth();<br>
+			<br>
+			// optionally, you can set the defaults in your JS<br>
+			$.fn.ofthemonth.defaults.which_day = "Sunday";<br>
+			$.fn.ofthemonth.defaults.which_week = "first";<br>
+			<br>
+			// or just send the params when calling the plugin (returns next Second Thursday)<br>
+			$(this).ofthemonth({which_day:"Thursday",which_week:"second"});<br>
+			<br>
+			// I like to set it to a variable<br>
+			var my_otm_date = New Date( $(this).ofthemonth() );<br>
+		</code>
+	</div>
+</section>
+<section>
+	<h3>There you have it. Enjoy.</h3>
+</section>
+
+<footer>
+	<ul>
+		<li><a href="https://github.com/eljamez/jquery.ofthemonth">Git it on Github</a></li>
+		<li><a href="http://eljamez.com">Made by eljamez</a></li>
+	</ul>
+</footer>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="js/jquery-2.1.0.min.js"><\/script>')</script>
+<script src="../dist/jquery.ofthemonth.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
