added mini version

--- a/demo/index.html
+++ b/demo/index.html
@@ -14,7 +14,7 @@
 				<p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
 <![endif]-->
 <header>
-	<h1>jquery.ofthemonth.js</h1>
+	<h1>jquery.ofthemonth</h1>
 	<p>A jQuery plugin that returns the js date object of a specific upcoming day.</p>
 </header>
 <section class="intro">
