updated some variable names

--- a/demo/index.html
+++ b/demo/index.html
@@ -19,18 +19,23 @@
 </header>
 <section class="intro">
 	<div class="section-content">
-		<h2>This plugin makes it easy to get a "next specific date".</h2>
-		<h4>Returns in the form of a <a href="http://www.w3schools.com/jsref/jsref_obj_date.asp">JavaScript Date Object</a></h4>
+		<div class="download">
+			<h2>Download</h2>
+			<a href="https://github.com/eljamez/jquery.ofthemonth/archive/master.zip" class="button">Download <span>(github)</span></a>
+			<a href="https://github.com/eljamez/jquery.ofthemonth/blob/master/dist/jquery.ofthemonth.js" class="button">Source Code <span>(github)</span></a>
+		</div>
 	</div>
 </section>
 <section>
+	<p>This plugin makes it easy to get a "next specific date".<br>
+		Returns in the form of a <a href="http://www.w3schools.com/jsref/jsref_obj_date.asp">JavaScript Date Object</a><br></p>
 	<h2>For example, let's say you want to always display the First Sunday of every month on your website.</h2>
 	<h3>All you have to do is call this plugin with the parameters you choose.</h3>
 	<h1 class="display-the-returned-date">The next "<i>First Sunday</i>" is <span></span></h1>
 	<p>The Paramaters Include</p>
 	<ul>
-		<li>Which Week To Target ("which_week" in the JS)</li>
-		<li>Which Day To Target ("which_day" in the JS)</li>
+		<li>Which Week To Target ("whichWeek" in the JS)</li>
+		<li>Which Day To Target ("whichDay" in the JS)</li>
 	</ul>
 	<h4>Try switching it up here.</h4>
 	<form action="" class="clearfix">
