Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Jquery.ofthemonth : A jQuery plugin that returns the js date object of the next specific day (of your choosing) of the month." />
+    <meta name="description" content="jquery.ofthemonth : A jQuery plugin that returns the js date object of the next specific day (of your choosing) of the month." />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Jquery.ofthemonth</title>
+    <title>jquery.ofthemonth</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/eljamez/jquery.ofthemonth">View on GitHub</a>
 
-          <h1 id="project_title">Jquery.ofthemonth</h1>
+          <h1 id="project_title">jquery.ofthemonth</h1>
           <h2 id="project_tagline">A jQuery plugin that returns the js date object of the next specific day (of your choosing) of the month.</h2>
 
             <section id="downloads">
@@ -99,7 +99,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Jquery.ofthemonth maintained by <a href="https://github.com/eljamez">eljamez</a></p>
+        <p class="copyright">jquery.ofthemonth maintained by <a href="https://github.com/eljamez">eljamez</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
