Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>This plugin is most useful if you are looking to retreive a specific day of the month in the immediate future. For example, let's say you would like to get the js date object for the "next" Last Friday relitave to today's date. That is exactly what this plugin does. You can get the First, Second, Third, Fourth, Second to Last, or Last upcoming specific weekday, either in the current month or next (depending on what you are looking for).</p>
+        <p>This plugin is most useful if you are looking to retreive a specific day of the month in the immediate future. For example, let's say you would like to get the JavaScript date object for the "next" Last Friday relatave to today's date. That is exactly what this plugin does. You can get the First, Second, Third, Fourth, Second to Last, or Last upcoming specific weekday, either in the current month or next (depending on what you are looking for).</p>
 
 <h2>
 <a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h2>
